# mcp_pdf_parser

./: .gitignore  README.md  pyproject.toml
src/mcp_pdf/: api.py  cli.py  config.py
src/mcp_pdf/context/: assembler.py  schema.py
src/mcp_pdf/core/: chunking.py  ids.py  ingest.py  pdf.py  storage.py
src/mcp_pdf/model/: adapter.py  simple_answer.py
src/mcp_pdf/protocol/: formats.py
